kyverno/policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: enforce
  rules:
  - name: validate-run-as-non-root
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Les conteneurs ne doivent pas s'exécuter en tant que root."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - securityContext:
              runAsNonRoot: true
